gcc-4_1-branch/gcc/testsuite/gcc.dg/gomp/tls-2.c
/* { dg-do compile } */

extern char buf[];
#pragma omp threadprivate (buf)	/* { dg-error "has incomplete type" } */

void
foo (void)
{
  int i;
#pragma omp threadprivate (i) /* { dg-error "automatic variable" } */
  i = 0;
}
